# fastapi-react-app

./: .gitignore  README.md  how_to_run.txt  package.json  pnpm-lock.yaml
backend/: README.md  main.py  pyproject.toml
backend/hdfmap_api/: __init__.py  __main__.py  fastapi_hdfmap.py  functions.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
frontend/src/: Api.tsx  App.css  App.tsx  AxisChoice.tsx  DavidiaPlots.tsx  EvaluateMetadata.tsx  FolderChoice.tsx  MarkdownTextBox.tsx  MetadataFormatTabs.tsx  Plots.tsx  ScanChoice.tsx  hdfmap_components.tsx  hdfmap_form.tsx  index.css
